# EvaluateSegmentation

./: .gitignore  ClassicMeasures.h  CohinKappaMetric.h  ContingencyTable.h  DiceCoefficientMetric.h  Dockerfile  EvaluateSegmentation.cxx  Global.h  HausdorffDistanceMetric.h  Imagedownloader.h  Localization.h  MahalanobisDistanceMetric.h  Metric_constants.h  Outputter.h  README.md  Segmentation.h  VariationOfInformationMetric.h  VolumeSimilarityCoefficient.h  VoxelPreprocessor.h  bibtex.txt
builds/: readme.md
builds/openSuSe/: EvaluateSegmentation-2015.07.02-OpenSuSe.rar
source/: AverageDistanceMetric.h  CMakeLists.txt  ClassicMeasures.h  ContingencyTable.h  EvaluateSegmentation.cxx  Global.h  GlobalConsistencyError.h  HausdorffDistanceMetric.h  ImageStatistics.h  Imagedownloader.h  InterclassCorrelationMetric.h  JaccardCoefficientMetric.h  LesionDetection.h  LesionDetectionConst.h  LesionDetectionMask.h  Localization.h  MahalanobisDistanceMetric.h  Metric_constants.h  MutualInformationMetric.h  Outputter.h  ProbabilisticDistanceMetric.h  RandIndexMetric.h  Segmentation.h  VoxelPreprocessor.h
source/TestSuite/: README.md
